# libfreenect

./: .gitignore
examples/: CMakeLists.txt
fakenect/: CMakeLists.txt  fakenect.c  record.c  wintime.h
wrappers/opencv/: CMakeLists.txt  cvdemo.c  libfreenect_cv.c
